2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/01_declaration_varaibal_sans_type.deca
// Description :
//      déclaration d'une variable  sans type 
// Resultats :
//    Erreur Contextuelle : ficher.deca:9:4:a identificateur non déclaré
// Historique :
// cree le 09/01/2024

{
    a ; 
    
}